fix(course): fetch staff with course detail query to prevent lazy loading error fix(reservation): bind member reservation to authenticated user fix(user): validate and normalize korean phone numbers refactor(security): tighten course and reservation access rules